# storage/api-docs/api-docs.json
@@ -1052,6 +1052,148 @@
                 }
             }
         },
+        "/api/flights/getGroupAirports": {
+            "post": {
+                "tags": [
+                    "flights"
+                ],
+                "summary": "Get airports",
+                "description": "Returns airports grouped between the date given by days, weeks, months or years.",
+                "operationId": "getGroupAirports",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "start_date": {
+                                        "description": "Date in format Y-m-d",
+                                        "type": "date"
+                                    },
+                                    "end_date": {
+                                        "description": "Date in format Y-m-d",
+                                        "type": "date"
+                                    }
+                                },
+                                "type": "object",
+                                "example": {
+                                    "start_date": "2019-06-10",
+                                    "end_date": "2020-05-09"
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Ok.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "": {
+                                            "description": "All models",
+                                            "type": "array",
+                                            "items": {
+                                                "type": "json"
+                                            }
+                                        }
+                                    },
+                                    "type": "object",
+                                    "example": [
+                                        {
+                                            "airport_id": 5306,
+                                            "name": "Barcelona International Airport"
+                                        },
+                                        {
+                                            "airport_id": 5327,
+                                            "name": "Adolfo Suárez Madrid–Barajas Airport"
+                                        }
+                                    ]
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "errors": {
+                                            "description": "List of errors.",
+                                            "type": "array",
+                                            "items": {
+                                                "type": "string"
+                                            }
+                                        }
+                                    },
+                                    "type": "object",
+                                    "example": {
+                                        "errors": [
+                                            "The start date field is required.",
+                                            "The start date is not a valid date.",
+                                            "The start date does not match the format Y-m-d.",
+                                            "The start date must be a date before or equal to today.",
+                                            "The end date field is required.",
+                                            "The end date is not a valid date.",
+                                            "The end date does not match the format Y-m-d.",
+                                            "The end date must be a date before or equal to today.",
+                                            "There is no data for the specified date."
+                                        ]
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "description": "Server message that contains the error.",
+                                            "type": "string"
+                                        },
+                                        "exception": {
+                                            "description": "Generated exception.",
+                                            "type": "string"
+                                        },
+                                        "file": {
+                                            "description": "File that throw the exception.",
+                                            "type": "string"
+                                        },
+                                        "line": {
+                                            "description": "Line that throws the exception.",
+                                            "type": "integer"
+                                        },
+                                        "trace": {
+                                            "description": "Trace route objects.",
+                                            "type": "array",
+                                            "items": {
+                                                "type": "object"
+                                            }
+                                        }
+                                    },
+                                    "type": "object",
+                                    "example": {
+                                        "messagge": "The command failed.",
+                                        "exception": "",
+                                        "file": "",
+                                        "line": 150,
+                                        "trace": {
+                                            "file": "",
+                                            "line": 1,
+                                            "content": ""
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/send-mail": {
             "post": {
                 "tags": [
